<?xml version="1.0"?>
<package format="2">
  <name>graph_tools</name>
  <version>0.1.0</version>
  <description>The graph_tools package</description>

  <maintainer email="rusmurtazin@ozon.ru">Rustam</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>hdl_graph_slam</build_depend>
  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <export>
  </export>
</package>
